# desktop

./: .gitignore  AUTHORS  BRANDING.md  LICENSE.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build.sh  dev.sh  index.html  init.sh  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
devscripts/: build.bat  build.sh  dev.bat  dev.sh  init.bat  init.sh
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/control/: mod.rs
src/assets/zyneon/css/: shared.css
src/assets/zyneon/script/: opener.ts  settings.ts  windowControls.ts
src/components/: DesktopPane.vue  DesktopRootView.vue  DesktopSideMenu.vue  DesktopTitlebar.vue  DesktopTitlebarButtons.vue
src/components/shared/: DesktopRootView.vue  DesktopSideMenu.vue  DesktopTitlebar.vue  DesktopTitlebarButtons.vue
src/components/shared/desktopelements/: Badge.vue  BadgeElement.vue  Card.vue  CardCollapsable.vue  CardDynamicPanel.vue  CardElement.vue  CardStructured.vue  CommandBarElement.vue  DesktopElement.vue  DynamicPanelElement.vue  InputBar.vue  InputBarCommand.vue  InputElement.vue  Spacer.vue  SpacerHorizontal.vue  SpacerHorizontalTitled.vue  StructuredCardElement.vue  (+1 more)
src/components/test/: HelloWorld.vue  ModrinthSearch.vue
src/pages/: DesktopDashboard.vue  DesktopDiscover.vue  DesktopDownloads.vue  DesktopLibrary.vue  DesktopSearch.vue  DesktopSettings.vue
(+12 files in other folders)
