[package]
name = "zyneon-desktop"
version = "27.0.9"
description = "Zyneon Desktop App"
authors = ["Zyneon Apex", "Zyneon Studios", "Zyneon", "nerotvlive"]
license = "GPL-3"
repository = "https://github.com/zyneonstudios/zyneon-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zyneon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.13.2", features = ["json"] }
tauri-plugin-single-instance = "2.4.1"
